Fix problems with styling and alignment across site as a whole

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,7 +23,7 @@ footer {
 
 h1, h2, h3, h4, h5, h6 {
     color: yellow;
-    text-shadow: 0 0 5px greenyellow;
+    text-shadow: 0 0 1px greenyellow;
     font-family: 'wallpoet', sans-serif;
 }
 
@@ -40,6 +40,10 @@ input {
     padding: 4px 8px;
     margin: 0 20px;
     text-align: center;
+}
+
+input[type=range] {
+    width: 85%;
 }
 
 a {
